manifests/linx-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linx-server
---
apiVersion: v1
kind: Service
metadata:
  name: linx-server
  namespace: linx-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: linx-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linx-server
  namespace: linx-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: linx-server
  template:
    metadata:
      labels:
        app: linx-server
    spec:
      containers:
      - name: web
        image: andreimarcu/linx-server:version-2.3.6
        imagePullPolicy: Always
        args:
          - -config
          - /config/linx-server.conf
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
          - name: config
            mountPath: /config
      volumes:
        - name: config
          configMap:
            name: linx-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linx-server
  namespace: linx-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - share.cluster.fun
    secretName: linx-server-ingress
  rules:
  - host: share.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: linx-server
          servicePort: 80
